MainScene.fxml updated - place to display product details (like name, price etc.). Not finished yet.

--- a/src/sample/MainScene.fxml
+++ b/src/sample/MainScene.fxml
@@ -2,12 +2,18 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -287,6 +293,39 @@
                   </Text>
                </children>
             </StackPane>
+            <HBox maxWidth="1.7976931348623157E308">
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Nr" />
+                  <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="470.0" text="Nazwa produktu" />
+                  <Button layoutX="62.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Ilość" />
+                  <Button layoutX="114.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Cena" />
+                  <Button layoutX="166.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Wartość" />
+               </children>
+            </HBox>
+            <ScrollPane>
+               <content>
+                  <ListView prefHeight="300.0" prefWidth="978.0" />
+               </content>
+            </ScrollPane>
+            <HBox prefWidth="200.0">
+               <children>
+                  <Region prefWidth="200.0" />
+                  <TextField prefHeight="25.0" prefWidth="420.0" />
+                  <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="238.0" text="Suma:">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="87.0" text="0.00">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
          </children>
       </VBox>
    </center>
